test_regress/t/t_param_type_bad2.out
%Error: t/t_param_type_bad2.v:8:24: syntax error, unexpected ';', expecting "'{"
    8 |    localparam t = logic;   
      |                        ^
%Error: t/t_param_type_bad2.v:9:28: syntax error, unexpected ';', expecting "'{"
    9 |    localparam t2 = realtime;   
      |                            ^
%Error: Exiting due to
